# task_two

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
parallel_sum_lib/: CMakeLists.txt  parallel_sum.c  sum.h
simple_sum_lib/: CMakeLists.txt  simple_sum.c  sum.h
system_lib/: CMakeLists.txt  error_code.h  header.h  source.c  system_lib_header.h
test/: CMakeLists.txt  tests.cpp
